// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/states/SecurityBlockedState should correctly render default icon with default colors 1`] = `
<AccessibleSVG
  className="bdl-SecurityBlockedState "
  height={167}
  viewBox="0 0 130 167"
  width={130}
>
  <path
    className="stroke-color"
    d="M7 0h91l32 30v130a7 7 0 0 1-7 7H7a7 7 0 0 1-7-7V7a7 7 0 0 1 7-7z"
    fill="#fff"
    stroke="#e8e8e8"
    strokeDasharray="3"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M98 0l32 30H98z"
    fill="#e8e8e8"
  />
  <path
    className="stroke-color"
    d="M35 55.385S50 63.91 65 50c15 13.91 30 5.385 30 5.385v47.788L65 120l-30-16.827V55.385z"
    fill="#fff"
    stroke="#909090"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M64.412 57c-12.353 11.128-24.706 4.308-24.706 4.308v38.23L64.412 113V57z"
    fill="#e8e8e8"
  />
  <path
    className="stroke-color"
    d="M85.588 71v23.333"
    stroke="#909090"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
</AccessibleSVG>
`;

exports[`icons/states/SecurityBlockedState should correctly render icon with custom class name 1`] = `
<AccessibleSVG
  className="bdl-SecurityBlockedState empty"
  height={167}
  viewBox="0 0 130 167"
  width={130}
>
  <path
    className="stroke-color"
    d="M7 0h91l32 30v130a7 7 0 0 1-7 7H7a7 7 0 0 1-7-7V7a7 7 0 0 1 7-7z"
    fill="#fff"
    stroke="#e8e8e8"
    strokeDasharray="3"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M98 0l32 30H98z"
    fill="#e8e8e8"
  />
  <path
    className="stroke-color"
    d="M35 55.385S50 63.91 65 50c15 13.91 30 5.385 30 5.385v47.788L65 120l-30-16.827V55.385z"
    fill="#fff"
    stroke="#909090"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M64.412 57c-12.353 11.128-24.706 4.308-24.706 4.308v38.23L64.412 113V57z"
    fill="#e8e8e8"
  />
  <path
    className="stroke-color"
    d="M85.588 71v23.333"
    stroke="#909090"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
</AccessibleSVG>
`;

exports[`icons/states/SecurityBlockedState should correctly render icon with specified color 1`] = `
<AccessibleSVG
  className="bdl-SecurityBlockedState "
  height={167}
  viewBox="0 0 130 167"
  width={130}
>
  <path
    className="stroke-color"
    d="M7 0h91l32 30v130a7 7 0 0 1-7 7H7a7 7 0 0 1-7-7V7a7 7 0 0 1 7-7z"
    fill="#fff"
    stroke="#fcfcfc"
    strokeDasharray="3"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M98 0l32 30H98z"
    fill="#fcfcfc"
  />
  <path
    className="stroke-color"
    d="M35 55.385S50 63.91 65 50c15 13.91 30 5.385 30 5.385v47.788L65 120l-30-16.827V55.385z"
    fill="#fff"
    stroke="#eee"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M64.412 57c-12.353 11.128-24.706 4.308-24.706 4.308v38.23L64.412 113V57z"
    fill="#fcfcfc"
  />
  <path
    className="stroke-color"
    d="M85.588 71v23.333"
    stroke="#eee"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
</AccessibleSVG>
`;

exports[`icons/states/SecurityBlockedState should correctly render icon with specified width and height and default viewBox value 1`] = `
<AccessibleSVG
  className="bdl-SecurityBlockedState "
  height={131}
  viewBox="0 0 130 167"
  width={200}
>
  <path
    className="stroke-color"
    d="M7 0h91l32 30v130a7 7 0 0 1-7 7H7a7 7 0 0 1-7-7V7a7 7 0 0 1 7-7z"
    fill="#fff"
    stroke="#e8e8e8"
    strokeDasharray="3"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M98 0l32 30H98z"
    fill="#e8e8e8"
  />
  <path
    className="stroke-color"
    d="M35 55.385S50 63.91 65 50c15 13.91 30 5.385 30 5.385v47.788L65 120l-30-16.827V55.385z"
    fill="#fff"
    stroke="#909090"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M64.412 57c-12.353 11.128-24.706 4.308-24.706 4.308v38.23L64.412 113V57z"
    fill="#e8e8e8"
  />
  <path
    className="stroke-color"
    d="M85.588 71v23.333"
    stroke="#909090"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
</AccessibleSVG>
`;

exports[`icons/states/SecurityBlockedState should correctly render icon with title 1`] = `
<AccessibleSVG
  className="bdl-SecurityBlockedState "
  height={167}
  title="abcde"
  viewBox="0 0 130 167"
  width={130}
>
  <path
    className="stroke-color"
    d="M7 0h91l32 30v130a7 7 0 0 1-7 7H7a7 7 0 0 1-7-7V7a7 7 0 0 1 7-7z"
    fill="#fff"
    stroke="#e8e8e8"
    strokeDasharray="3"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M98 0l32 30H98z"
    fill="#e8e8e8"
  />
  <path
    className="stroke-color"
    d="M35 55.385S50 63.91 65 50c15 13.91 30 5.385 30 5.385v47.788L65 120l-30-16.827V55.385z"
    fill="#fff"
    stroke="#909090"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
  <path
    className="fill-color"
    d="M64.412 57c-12.353 11.128-24.706 4.308-24.706 4.308v38.23L64.412 113V57z"
    fill="#e8e8e8"
  />
  <path
    className="stroke-color"
    d="M85.588 71v23.333"
    stroke="#909090"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="4"
  />
</AccessibleSVG>
`;
